--- a/sample.html
+++ b/sample.html
@@ -124,12 +124,12 @@ Our project is <font color="#FF0099">scientifically interesting</font> because:
  
 <h2 id="fea">FEASIBILITY</h2>
 <h3>Selection of theme</h3>
-<p>Our first idea was to make an eye drop that was made of DNA sheet and can cut ultra violet. However, we thought it would need a lot of steps to put this idea into practice. Thus, for the first step of this project, we decided to do two basic researches mainly in this summer. The first aim was to attach AuNPs on DNA origami and form DNA sheet by connecting these DNA origamis each other. The second aim was to check whether this sheet had the effect of intercepting ultra violet. This theme was not engineering but scientific, so it suited for us because we major in science.</p>
+<p>Our first idea was to make an eye drop that was made of DNA sheet and can cut ultra violet. However, we thought it would need a lot of steps to put this idea into practice. Thus, for the first step of this project, we focused on two basic goals over the summer. The first aim was to attach AuNPs on DNA origami and form DNA sheet by connecting these DNA origamis each other. The second aim was to check whether this sheet had the effect of intercepting ultra violet. Those themes were not engineering but scientific, so it suited for us because we major in science.</p>
 
 <h3>Support system</h3>
-<p>We are new face, but Dr. Nathanael Aubert-Kato, the super adviser, thoroughly supported us by using his specialized knowledge of DNA computing and the experience of coaching other BIOMOD team before. Thus, the graduate school of Ochanomizu University offered us expenses and facilities that was necessary for our experiments.</p>
+<p>We are new to the field, but Dr. Nathanael Aubert-Kato, the team's supervisor, thoroughly supported us by using his specialized knowledge of DNA computing and the experience of coaching other BIOMOD teams before. Additionally, the graduate school of Ochanomizu University gave us access to consumable and facilities that were necessary for our experiments.</p>
 
-<p>This project was  <font color="#FF0099">feasible</font> because we chose  <font color="#FF0099">proper level and field of theme</font> and we could get  <font color="#FF0099">enough support</font>.</p>
+<p>This project was  <font color="#FF0099">feasible</font> because we chose  <font color="#FF0099">doable objective in fields</font>where proper expertise was available and we could get  <font color="#FF0099">enough support</font>.</p>
 
 
 </div>
