--- a/sample2.html
+++ b/sample2.html
@@ -38,7 +38,7 @@
 <h1>BACKGROUND</h1>
 <h2 id="motivation">DNA ORIGAMI</h2>
 <p class="origami">
-The first report that uses DNA as nano material is said to by a group of Nadrian Seeman, in 1982. In 1998,the same group has succeeded in making a two-dimensional sheet structure arranging a plurality of DNA molecules to the plane as raft. In 2006, Paul Rothemund succeeded in creating "DNA origami" made from a single very long DNA derived from natural virus and the short DNA. The frame is made with long DNA and the short DNA acts as a stapler, determing the shape as a whole. We can make various planar structures in this way. 
+The first reported use of DNA as nano material was done by Nadrian Seeman, in 1982 <a href="#(1)"><sup>(1)</sup></a>. In 1998,the same group has succeeded in making a two-dimensional sheet structure arranging multiple DNA molecules on a surface <a href="#(2)"><sup>(2)</sup></a>. In 2006, Paul Rothemund succeeded in creating "DNA origami" made from a single very long DNA strand derived from natural virus and the short DNA strands <a href="#(3)"><sup>(3)</sup></a>. The structure is made by folding the long DNA strand, with the short DNA strands acting as a staples, determining the shape as a whole. We can make various planar structures in this way. 
 </p>
 <p class="gold nano particle">
 <h2 id="gold particle">GOLD PARTICLE</h2> 
@@ -68,14 +68,14 @@ There are two types of interference, namely, constructive interference and destr
 Wave interference can be seen when rain drops fall into a pond, for example. 
 </p>
 <p>
- Let’s see these phenomena in a mathematical way. 
+ We can see these phenomena in a mathematical way. 
  <br>
  
  Wave equation is given by the following;
  <br>
 <img src="./image/siki2.jpg" alt="サンプル" width="320px" height="40px">
 <br>
-where f(x,t) is the magnitude of wave, k is wavenumber, x is the observation point, xo is generation point of wave, ω is angular frequency, and t is time. 
+where f(x,t) is the magnitude of wave, k is wavenumber, x is the observation point, xo is the generation point of wave, ω is angular frequency, and t is time. 
 <br>
 <p>
  The total displacement at a certain point is the sum of that of the individual waves. Therefore, the total magnitude is given by;
@@ -101,7 +101,7 @@ Where B is energy[W/m3], λ is wave length, h is Planck constant 6.626×10−34 
 
 <h2 id="chemical bond">GOLD SULFUR BOND</h2>
 <p class="">
-It is known that molecules contain thiol group are able to form SH-Au bonds on gold and make self-assembled monolayer. In our experiment, we use this self assembly to attach anchor oligo DNA on surface of gold nanoparticles via SH-modification site of anchor. <a href="#(1)"><sup>(1)</sup></a>
+It is known that molecules contain thiol group are able to form SH-Au bonds on gold and make self-assembled monolayer. In our experiment, we use this self assembly to attach anchor oligo DNA on surface of gold nanoparticles via SH-modification site of anchor. <a href="#(4)"><sup>(4)</sup></a>
 </p>
 <p class="2">
 
@@ -111,7 +111,10 @@ It is known that molecules contain thiol group are able to form SH-Au bonds on g
 </p>
 
 <h2 id="reference">REFERENCE</h2>
-<a id="(1)">(1)</a>Häkkinen H. The gold-sulfur interface at the nanoscale. (2012) Nature Chemistry. 22;4(6):443-55.
+<a id="(1)">(1)</a><br>
+<a id="(2)">(2)</a><br>
+<a id="(3)">(3)</a><br>
+<a id="(4)">(4)</a>Häkkinen H. The gold-sulfur interface at the nanoscale. (2012) Nature Chemistry. 22;4(6):443-55.<br>
 
 </div>
 
