--- a/sample5.html
+++ b/sample5.html
@@ -52,7 +52,7 @@
 </ul>
 <p>
 <ul>
-<a href="#sponsers"><li>SPONSERS</li></a>
+<a href="#sponsers"><li>SPONSORS</li></a>
 </ul>
 </div>
 
@@ -120,7 +120,7 @@ Our team was inaugurated last April, gathering students from various backgrounds
 <tr>
    <td>Dr. Nathanael Aubert-Kato</td>
 </table>
-<h2 id="sponsers">SPONSERS </h2>
+<h2 id="sponsers">SPONSORS </h2>
 ・Institute for grobal leadership (Ochanomizu university)<br>
 ・Leading graduate school promotion center (Ochanomizu university)
 
