--- a/sample6.html
+++ b/sample6.html
@@ -61,7 +61,7 @@ Where, B is energy[W/m<sup>3</sup>], λ is wave length, h is planck constant 6.6
 <p>
 These are results of the simulation.
  In our simulation, we assumed the attachment of gold nanoparticles below (Fig1).  Solar altitudes between 45°and 75°are calculated because UV is the strongest at those altitudes.
-<center><img src="./image/simuzu6.jpg" alt="サンプル" width="600px" height="338px"></center>
+<center><img src="./image/2_3.jpg" alt="サンプル" width="800px" height="450px"></center>
 <center>Figure1: The Attachment of Gold Nanoparticles</center><br>
  <p>We simulated the strength of solar light depending wavelength after considering interference effects created by the gold nanoparticles (Fig2). We can see that UV is greatly reduced while strength of visible lights is more than twice. </p>
 <center><img src="./image/simuzu7.jpg" alt="サンプル" width="800px" height="450px">
@@ -83,8 +83,8 @@ In our project, we connected DNA origami to each other using two types of staple
 Our simulation was made with the Random Function of Mathematica, changing the probability of conation for detachment.
 <p>
 Below is the simulation results (Fig4). We hypothesized two different detachment rates, high and low, and compared the number of the origami that formed a structure when 100 attachments or detachments occurred. The test was simulated 10 times for both detachment rates, and the average is shown in the graph. In the graph, ‘total’ is the number of origami included in the whole structure of the sheet, and ‘well assembled’ is the number of origami composing the largest rectangular area. The two figures show examples of the structures (Fig5-a,b).</p>
-<center><img src="./image/simuzu9.jpg" alt="サンプル" width="800px" height="450px">
-Figure4. Comparison of the number of origami included in a sheet, depending on high or low detachment rate. ‘Total’ indicates the number of origami forming the whole sheet structure, while ‘well assembled’ indicates the number of origami included in the largest rectangular area.
+<center><img src="./image/simu.jpg" alt="サンプル" width="700px" height="450px"></center>
+<center>Figure4. Comparison of number of origami included in a sheet, depending on high or low detachment rate. ‘Total’ indicates the number of origami forming the whole sheet structure, while ‘well assembled’ indicates the number of origami included in the largest rectangular area.
 <br><br>
 <br>a.<img src="./image/simuzu4.jpg" alt="サンプル" width="400px" height="225px">
 <br>b.<img src="./image/simuzu5.jpg" alt="サンプル" width="400px" height="225px">
