--- a/sample2.html
+++ b/sample2.html
@@ -36,7 +36,7 @@
 
 <div id="contents"><font size="5">
 <h1>BACKGROUND</h1>
-<h2 id="motivation">DNA ORIGAMI</h2>
+<h2 id="dna origami">DNA ORIGAMI</h2>
 <p class="origami">
 The first reported use of DNA as nano material was done by Nadrian Seeman, in 1982 <a href="#(1)"><sup>(1)</sup></a>. In 1998,the same group has succeeded in making a two-dimensional sheet structure arranging multiple DNA molecules on a surface <a href="#(2)"><sup>(2)</sup></a>. In 2006, Paul Rothemund succeeded in creating "DNA origami" made from a single very long DNA strand derived from natural virus and the short DNA strands <a href="#(3)"><sup>(3)</sup></a>. The structure is made by folding the long DNA strand, with the short DNA strands acting as a staples, determining the shape as a whole. We can make various planar structures in this way. 
 </p>
@@ -109,11 +109,11 @@ It is known that molecules contain thiol group are able to form SH-Au bonds on g
 <p class="3">
 
 </p>
-
+<br>
 <h2 id="reference">REFERENCE</h2>
-<a id="(1)">(1)</a><br>
-<a id="(2)">(2)</a><br>
-<a id="(3)">(3)</a><br>
+<a id="(1)">(1)N Seeman, Nucleic acid junctions and lattices Journal of Theoretical Biology 99 (2): 237–47. doi:10.1016/0022-5193(82)90002-9. PMID 6188926.</a><br>
+<a id="(2)">(2)</a>Erik Winfree<sup>1</sup>, Furong Liu<sup>2</sup>, Lisa A. Wenzler<sup>2</sup> & Nadrian C. Seeman<sup>2</sup> Design and self-assembly of two-dimensional DNA crystals Nature 394, 539-544 (6 August 1998) | doi:10.1038/28998; Received 10 March 1998; Accepted 5 May 1998<br>
+<a id="(3)">(3)</a>Paul W. K. Rothemund<sup>1</sup> Folding DNA to create nanoscale shapes and patterns Nature 440, 297-302 (16 March 2006) | doi:10.1038/nature04586; Received 7 September 2005; Accepted 12 January 2006<br>
 <a id="(4)">(4)</a>Häkkinen H. The gold-sulfur interface at the nanoscale. (2012) Nature Chemistry. 22;4(6):443-55.<br>
 
 </div>
