--- a/sample6.html
+++ b/sample6.html
@@ -63,20 +63,20 @@ These are results of the simulation.
  In our simulation, we assumed the attachment of gold nanoparticles below (Fig1).  Solar altitudes between 45°and 75°are calculated because UV is the strongest at those altitudes.
 <center><img src="./image/2_3.jpg" alt="サンプル" width="800px" height="450px"></center>
 <center>Figure1: The Attachment of Gold Nanoparticles</center><br>
- <p>We simulated the strength of solar light depending wavelength after considering interference effects created by the gold nanoparticles (Fig2). We can see that UV is greatly reduced while strength of visible lights is more than twice. </p>
+ <p>We simulated the strength of solar light depending wavelength after considering interference effects created by the gold nanoparticles (Fig2). We can see that <font color="#FF0099">UV is greatly reduced while strength of visible lights is more than twice</font>. </p>
 <center><img src="./image/simuzu7.jpg" alt="サンプル" width="800px" height="450px">
 Figure2: Solar Spectrum of interfered Solar Light</center>
 <br>
  <p>Compared with original solar spectrum, however, solar light is reduced excessively on all wavelength. There is little difference between strength of UV and visible light.　(Fig3)</p>
  <center><img src="./image/simuzu8.jpg" alt="サンプル" width="800px" height="450px">
 Figure3: Spectrum of solar spectrum and interfered Solar Light </center>
- <p>It might be impossible that we get strong wavelength dependence, but at least we can cut over 90 % of UV.</p>
+ <p>It might be impossible that we get strong wavelength dependence, but at least <font color="#FF0099">we can cut over 90 % of UV</font>.</p>
 
 <br>
 
 <h2 id="step2" style="text-align : left">ATTACHMENT and DETACHMENT of DNA SHEETS</h2>
 <p class="motivation">
-In our project, we connected DNA origami to each other using two types of staple strands, one for the horizontal arrangement and the other for the vertical arrangement. These two strands have a different Tm value; the strand responsible for the horizontal arrangement has a Tm value of 71.8℃ while the strand for the vertical arrangement has a Tm value of 58.8℃. Tm value is the temperature at which half of DNA double helix dissociates into single strands. This means the rate of attachment for each side of the origami is different. Moreover, detachment of them can happen as well. For this reason, we cannot expect all the origami to assemble perfectly; there may be holes in our sheet. Therefore, it is necessary to simulate whether or how well the supposed structure is actually made. 
+In our project, we connected DNA origami to each other using <font color="#FF0099">two types of staple strands</font>, one for the horizontal arrangement and the other for the vertical arrangement. These two strands have a <font color="#FF0099">different Tm value</font>; the strand responsible for the horizontal arrangement has a Tm value of 71.8℃ while the strand for the vertical arrangement has a Tm value of 58.8℃. Tm value is the temperature at which half of DNA double helix dissociates into single strands. This means the rate of attachment for each side of the origami is different. Moreover, detachment of them can happen as well. For this reason, we cannot expect all the origami to assemble perfectly; there may be holes in our sheet. Therefore, it is necessary to simulate whether or how well the supposed structure is actually made. 
 </p>
 
 <p>
