--- a/sample4.html
+++ b/sample4.html
@@ -68,7 +68,7 @@ c.<img src="./image/AFM3.jpg" alt="サンプル" width="246px" height="261px">
 <center2>Figure1. AFM image of DNA origami. a, Wide angle view of DNA origami. b, Close-up view of the origami circled in fig. 1-a. c, Close-up view of another sample.
 </center2>
 <p>
-Structures of well-defined rectangular origami were observed (Fig. 1-a,b). They were just about the size we had expected (70nm x 100nm) as well. However, some samples showed origami that were all distorted very similarly (Fig. 1-c). This suggests the modification we made to the several staple strands might have had an effect on the proper formation of the structure. In addition to that, these origami were much larger both in area and height. Since some structures had twice the area of the supposed origami, there may be a possibility that several origami stuck on top of each other or sideways. 
+Structures of well-defined rectangular origami were observed (Fig. 1-a,b). They were just about the size we had expected (70nm x 100nm) as well. However, some samples showed origami that were all distorted very similarly (Fig. 1-c). This suggests <font color="#FF0099">the modification we made to the several staple strands might have had an effect on the proper formation of the structure</font>. In addition to that, these origami were much larger both in area and height. Since some structures had twice the area of the supposed origami, there may be a possibility that several origami stuck on top of each other or sideways. 
 </p>
 
 <h3>1-2. DNA origami with glue sequence strands</h3>
