--- a/sample3.html
+++ b/sample3.html
@@ -14,6 +14,7 @@
 
 </head>
 <body>
+<div id="headerArea">
   <nav role="navigation" class="navigation">
     <div class="navigation-container">
       <ul class="logo-navigation">
@@ -31,7 +32,7 @@
 	  
       </ul>
     </div>
-    
+ </div>   
    
   </nav>
   
@@ -53,6 +54,8 @@
 
 <font size="5">
 <div id="contents">
+<br>
+<br>
 <h1>EXPERIMENT</h1>
 <h2 id="step1">MATERIALS</h2>
 <li>All staple DNA, anchor oligo DNA, glue DNA and gold nanoparticle were purchased from Sigma-Aldrich Japan. </li>
