--- a/sample5.html
+++ b/sample5.html
@@ -14,6 +14,7 @@
 
 </head>
 <body>
+<div id="headerArea">
   <nav role="navigation" class="navigation">
     <div class="navigation-container">
       <ul class="logo-navigation">
@@ -31,7 +32,7 @@
 	  
       </ul>
     </div>
-    
+</div>    
    
   </nav>
   
@@ -58,6 +59,8 @@
 
 <font size="5">
 <div id="contents">
+<br>
+<br>
 <h1>ABOUT US</h>
 <h2 id="aboutus">OUR TEAM</h2>
 <p class="aboutus">
