--- a/sample.html
+++ b/sample.html
@@ -19,6 +19,7 @@
 
 </head>
 <body>
+<div id="headerArea">
   <nav role="navigation" class="navigation">
     <div class="navigation-container">
       <ul class="logo-navigation">
@@ -36,7 +37,7 @@
 	  
       </ul>
     </div>
-    
+</div>     
    
   </nav>
   
@@ -74,6 +75,9 @@
 
 
 <div id="contents">
+<br>
+<br>
+
 <h1>PROJECT</h1>
 <center><iframe width="560" height="315" src="https://www.youtube.com/embed/k0jOg9p1sl0" frameborder="0" allowfullscreen></iframe></center>
 <h2 id="abstract1">ABSTRACT</h2>
