--- a/sample2.html
+++ b/sample2.html
@@ -14,6 +14,7 @@
 
 </head>
 <body>
+<div id="headerArea">
   <nav role="navigation" class="navigation">
     <div class="navigation-container">
       <ul class="logo-navigation">
@@ -30,11 +31,14 @@
 	  <li><a href="sample5.html">ABOUT US</a></li>
       </ul>
     </div>
+  </div>
   </nav>
 </body>
 
 
 <div id="contents"><font size="5">
+<br>
+<br>
 <h1>BACKGROUND</h1>
 <h2 id="dna origami">DNA ORIGAMI</h2>
 <p class="origami">
