--- a/sample4.html
+++ b/sample4.html
@@ -14,6 +14,7 @@
 
 </head>
 <body>
+<div id="headerArea">
   <nav role="navigation" class="navigation">
     <div class="navigation-container">
       <ul class="logo-navigation">
@@ -31,7 +32,7 @@
       </ul>
     </div>
     
-   
+ </div>  
   </nav>
   
 </body>
@@ -51,7 +52,8 @@
 
 <font size="5">
 <div id="contents">
-
+<br>
+<br>
 <h1>RESULT</h1>
 
 <h2 id="step1">1. ORIGAMI OBSERVATION by AFM</h2>
