--- a/sample6.html
+++ b/sample6.html
@@ -14,6 +14,7 @@
 
 </head>
 <body>
+<div id="headerArea">
   <nav role="navigation" class="navigation">
     <div class="navigation-container">
       <ul class="logo-navigation">
@@ -31,7 +32,7 @@
 	  
       </ul>
     </div>
-    
+</div>
    
   </nav>
   
@@ -49,6 +50,8 @@
 
 <font size="5">
 <div id="contents">
+<br>
+<br>
 <h1>SIMULATION</h1>
 
 
