--- a/sample7.html
+++ b/sample7.html
@@ -14,6 +14,7 @@
 
 </head>
 <body>
+<div id="headerArea">
   <nav role="navigation" class="navigation">
     <div class="navigation-container">
       <ul class="logo-navigation">
@@ -31,7 +32,7 @@
 	  
       </ul>
     </div>
-   
+</div>   
   </nav>
   
 </body>
@@ -61,6 +62,8 @@
 
 <font size="5">
 <div id="contents">
+<br>
+<br>
 <h1>EXPERIMENT</h1>
 <h2>SUPPLEMENTARY DATA</h2>
 <h3 id="step1">DNA origami</h3>
