--- a/sample.html
+++ b/sample.html
@@ -84,6 +84,7 @@
 <p class="abstract1">
 Gold nanoparticles, which have specific optical properties, have concrete applications in many fields, such as Organic solar cells, Sensor probe, Remedy, Biomedical drug delivery, Conductive material and so on. Moreover, it is known that regular distribution of particles will interfere with light. Gold nanoparticles spread on a surface of filter absorb UV partially and then passing UV interference each other. In two steps, this filter cuts UV. In this project, we focus on the property that such particles absorb and interfere light at specific wave lengths, in patricular UV. By using this, we design an optical filter that reduces ultraviolet rays. To accurately create an even distribution of particles, we use multiple rectangular DNA origamis from Rothemund et al.<a href="sample7.html" title="sample7.html"><sup>(designed DNA origami here)</sup></a>. DNA origamis are modified so that some staple strands are extended and can capture fictionalized gold nanoparticles (see EXPERIMENT). Other staple strands are designed to bind to other origamis with the help of a ‘glue’ DNA strand. This optical filter is a material that both cuts UVs while being transparent at other wavelengths and may enable us to create novel transparent UV cut material, which could be used for contact lenses for instance.
 </p>
+<center><img src="./image/new5.jpg" alt="サンプル" width="800px" height="450px"></center>
 
 
 </p>
