--- a/sample.html
+++ b/sample.html
@@ -43,6 +43,7 @@
   
 </body>
  <div id="sidebar">
+ <b>
  <ul>
 <a href="#abstract1"font size="5"><li>ABSTRACT</li></a>
 </ul>
@@ -65,6 +66,7 @@
 <p>
 <ul>
 <a href="#fea"><li>FEASIBILITY</li></a>
+</b>
  </ul>
 
 </div>
@@ -114,6 +116,9 @@ Our project is <font color="#FF0099">technologically interesting </font>because:
 <Li>We designed a simple way to create large organized patterns of gold nanoparticles (AuNPs).</li>
 <li>It is possible to control the wavelength that is absorbed by AuNPs easily by changing their pattern on the sheet.</li>
 <li>We created a large sheet by connecting small DNA origami (70nm x 100nm) via short glue sequence strands. This is a <font color="#FF0099">novel technology</font> and has<font color="#FF0099"> multiple potential applications</font>. For example, using this technology can make eye drops that create large sheets on the eyes.</li>
+<br>
+<center><img src="./image/new7.jpg" alt="サンプル" width="316px" height="287px"></center>
+
 <br>
 Our project is <font color="#FF0099">scientifically interesting</font> because:
 <li>This <font color="#FF0099">UV absorbent DNA sheet </font>is made of only DNA and AuNPs, and can easily<font color="#FF0099"> be applied directly on our skin or mucous membrane</font>.  Although the effect of gold nanoparticles upon our body is not clear yet, they can be replaced in the design as long as the UV cut pattern can be made.</li>
