--- a/sample3.html
+++ b/sample3.html
@@ -39,6 +39,7 @@
 </body>
 <font size="5">
  <div id="sidebar">
+ <b>
  <ul>
 <a href="#step1"font size="5" ><li>MATERIALS</li></a>
 </ul>
@@ -50,6 +51,7 @@
 <ul>
 <a href="#step3"><li>REFERENCE</li></a>
 </ul>
+</b>
 </div>
 
 <font size="5">
@@ -58,7 +60,7 @@
 <br>
 <h1>EXPERIMENT</h1>
 <h2 id="step1">MATERIALS</h2>
-<li>All staple DNA, anchor oligo DNA, glue DNA and gold nanoparticle were purchased from Sigma-Aldrich Japan. </li>
+<li>All staple DNA, anchor oligo DNA, glue DNA and gold nanoparticle were &nbsp;&nbsp;&nbsp;&nbsp;purchased from Sigma-Aldrich Japan. </li>
 <li>Single-stranded M13mp18 DNA were purchased from BioLabs Inc.</li>
 
 
